# financial-rag

./: .gitignore  README.md  pyproject.toml
src/: download_models.py
src/rag/: document_chunking.py  document_parser.py
src/rag/database_interaction/: document_database.py  embedding_model.py  vector_store.py  vector_store_factory.py
src/rag/pipeline/defs/: assets.py  definitions.py  resources.py
src/rag/retrieval/: prompt_factory.py  retriever.py  utils.py
